quienes somos terminado

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.png" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section>
+        <h1>Heroes de alquiler</h1>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="nuestros-cv.html">Nuestros CV</a></li>
+          <li><a href="quienes-somos.html">Quienes somos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
