--- a/web/quienes-somos.html
+++ b/web/quienes-somos.html
@@ -5,6 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quienes somos</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.png" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section>
+        <h1>Heroes de alquiler</h1>
+      </section>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="nuestros-cv.html">Nuestros CV</a></li>
+          <li><a href="quienes-somos.html">Quienes somos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="batman">
+      <header>
+        <img src="img/batman.jpg" alt="batman triste" width="400px" />
+        <h1>Batman (Bruce Wane)</h1>
+      </header>
+      <article>
+        Soy un personaje de cómic creado por los estadounidenses Bob Kane y Bill
+        Finger, ​ y propiedad de DC Comics. Apareció por primera vez en la
+        historia titulada «El caso del sindicato químico» de la revista
+        Detective Comics N.º 27, lanzada por la editorial National Publications
+        el 30 de marzo de 1939.
+      </article>
+    </section>
+    <section id="kakarotto">
+      <header>
+        <img src="img/kakarotto.jpg" alt="goku lgtb" width="400px" />
+        <h1>Kakarotto (Son Goku)</h1>
+      </header>
+      <article>
+        Soy un personaje ficticio, protagonista de la serie de manga y anime
+        Dragon Ball. Fue creado por Akira Toriyama en 1984
+      </article>
+    </section>
+  </body>
 </html>
