añado foto a contacto

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -22,6 +22,9 @@
       </nav>
     </header>
     <section>
+      <img src="img/batman-y-kakarotto.jpg" alt="batman y goku" />
+    </section>
+    <section>
       <form action="contacto.html" method="get">
         <p>Nombre: <input type="text" name="nombre" size="40" /></p>
         <p>Email: <input type="email" name="email" size="40" required /></p>
